--- a/tribute-page.html
+++ b/tribute-page.html
@@ -8,46 +8,45 @@
   </head>
   <body>
     <header>
-      <h1 id="rubrik"> <img class="i" src="twocats.png"> My Cats <img class="i" src="twocats2.png"> </h1>
+      <h1 id="rubrik"> <img class="i" src="bilder/twocats.png"> My Cats <img class="i" src="bilder/twocats2.png"> </h1>
     </header>
       <div id="underRubrik">
         <h1>Pippin</h1>
         <h1>Pulzen</h1>
       </div>
-      <div class="text">
-        <div>
-          <p>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-            tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-            quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo
-            consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
-            consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto
-            odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait
-            nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet
-            doming id quod mazim placerat facer possim assum.
-          </p>
+
+     <div id="list">
+
+          <div>
+            <ul>
+              <li>27 April</li>
+              <li>11 Years</li>
+              <li>Orange</li>
+            </ul>
+          </div>
+
+          <div>
+            <ul>
+              <li>3 May</li>
+              <li>2 Years</li>
+              <li>Gray-White</li>
+            </ul>
+          </div>
         </div>
-        <div>
-          <p>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-            tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-            quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo
-            consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
-            consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto
-            odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait
-            nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet
-            doming id quod mazim placerat facer possim assum.
-          </p>
-        </div>
-      </div>
+
+        <a id="wiki-link" href="https://sv.wikipedia.org/wiki/Cornish_rex" target="_blank">Cornish Rex Wikipedia</a>
+
       <div id="bilder">
-        <img class="first" src="IMG_9514.JPG" alt="båda ute">
-        <img class="first" src="pulzen.jpg" alt="pulzen">
-        <img class="first" src="pippin.JPG" alt="pippin">
-        <img class="first" src="IMG_8651.jpg" alt="båda">
-        <img class="first" src="IMG_8539.jpg" alt="pulzen fönster">
+        <img class="first" src="bilder/IMG_9514.JPG" alt="båda ute">
+        <img class="first" src="bilder/pulzen.jpg" alt="pulzen">
+        <img class="first" src="bilder/pippin.JPG" alt="pippin">
+        <img class="first" src="bilder/IMG_8651.jpg" alt="båda">
+        <img class="first" src="bilder/IMG_8539.jpg" alt="pulzen fönster">
       </div>
     <footer>
+      <p>
+        Linéa Lejerkrans 2020
+      </p>
     </footer>
   </body>
   </html>
