--- a/tribute-page.html
+++ b/tribute-page.html
@@ -1,13 +1,16 @@
 <DOCETYPE html>
   <head>
     <title>My Cats</title>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> <!--alla tecken-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css"> <!--länka css-filen-->
+    <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet"> <!--länka en font-->
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet"> <!--länka en font-->
+    <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap" rel="stylesheet">
+
   </head>
   <body>
-    <header>
+    <header> <!--översta bandet-->
       <h1 id="rubrik"> <img class="i" src="bilder/twocats.png"> My Cats <img class="i" src="bilder/twocats2.png"> </h1>
     </header>
       <div id="underRubrik">
@@ -20,7 +23,7 @@
           <div>
             <ul>
               <li>27 April</li>
-              <li>11 Years</li>
+              <li>11 Years</li> <!--lista på vänstra sidan-->
               <li>Orange</li>
             </ul>
           </div>
@@ -28,13 +31,14 @@
           <div>
             <ul>
               <li>3 May</li>
-              <li>2 Years</li>
+              <li>2 Years</li> <!--lista på högra sidan-->
               <li>Gray-White</li>
             </ul>
           </div>
         </div>
 
         <a id="wiki-link" href="https://sv.wikipedia.org/wiki/Cornish_rex" target="_blank">Cornish Rex Wikipedia</a>
+        <!--länk till wikipedia sida-->
 
       <div id="bilder">
         <img class="first" src="bilder/IMG_9514.JPG" alt="båda ute">
@@ -43,7 +47,36 @@
         <img class="first" src="bilder/IMG_8651.jpg" alt="båda">
         <img class="first" src="bilder/IMG_8539.jpg" alt="pulzen fönster">
       </div>
-    <footer>
+
+      <div id="text">
+        <b>Relationship with Humans</b><br>
+        Felis catus has had a very long relationship with humans. Ancient Egyptians may have first domesticated cats
+        as early as 4,000 years ago. Plentiful rodents probably drew wild felines to human communities. The cats'
+        skill in killing them may have first earned the affectionate attention of humans. Early Egyptians worshipped
+        a cat goddess and even mummified their beloved pets for their journey to the next world—accompanied by
+        mummified mice! Cultures around the world later adopted cats as their own companions. <br>
+        <br>
+        <b>Hunting Abilities</b><br>
+        Like their wild relatives, domestic cats are natural hunters able to stalk prey and pounce with sharp claws
+        and teeth. They are particularly effective at night, when their light-reflecting eyes allow them to see better
+        than much of their prey. Cats also enjoy acute hearing. All cats are nimble and agile, and their long tails aid
+        their outstanding balance. <br>
+        <br>
+        <b>Communication</b><br>
+        Cats communicate by marking trees, fence posts, or furniture with their claws or their waste. These scent posts
+        are meant to inform others of a cat's home range. House cats employ a vocal repertoire that extends from a purr
+        to a screech. <br>
+        <br>
+        <b>Diet</b><br>
+        Domestic cats remain largely carnivorous, and have evolved a simple gut appropriate for raw meat. They also
+        retain the rough tongue that can help them clean every last morsel from an animal bone (and groom themselves).
+        Their diets vary with the whims of humans, however, and can be supplemented by the cat's own hunting successes.
+
+
+
+      </div>
+
+    <footer> <!--understa bandet-->
       <p>
         Linéa Lejerkrans 2020
       </p>
