--- a/tribute-page.html
+++ b/tribute-page.html
@@ -40,6 +40,14 @@
         <a id="wiki-link" href="https://sv.wikipedia.org/wiki/Cornish_rex" target="_blank">Cornish Rex Wikipedia</a>
         <!--länk till wikipedia sida-->
 
+        <div id="gif">
+          <img class="movingcat" src="bilder/sleep.gif" name="sleeping cat">
+          <img class="movingcat" src="bilder/sleep.gif" name="sleeping cat">
+          <img class="movingcat" src="bilder/sleep.gif" name="sleeping cat">
+          <img class="movingcat" src="bilder/sleep.gif" name="sleeping cat">
+          <img class="movingcat" src="bilder/sleep.gif" name="sleeping cat">
+        </div>
+
       <div id="bilder">
         <img class="first" src="bilder/IMG_9514.JPG" alt="båda ute">
         <img class="first" src="bilder/pulzen.jpg" alt="pulzen">
@@ -51,7 +59,7 @@
         <div id="total">
           <div class="text">
             <p>
-              <b>Relationship with Humans</b>
+              <b>Relationship with Humans</b><br>
               Felis catus has had a very long relationship with humans. Ancient Egyptians may have first domesticated cats
               as early as 4,000 years ago. Plentiful rodents probably drew wild felines to human communities. The cats'
               skill in killing them may have first earned the affectionate attention of humans. Early Egyptians worshipped
@@ -62,7 +70,7 @@
 
           <div class="text">
             <p>
-              <b>Hunting Abilities</b>
+              <b>Hunting Abilities</b><br>
               Like their wild relatives, domestic cats are natural hunters able to stalk prey and pounce with sharp claws
               and teeth. They are particularly effective at night, when their light-reflecting eyes allow them to see better
               than much of their prey. Cats also enjoy acute hearing. All cats are nimble and agile, and their long tails aid
@@ -72,7 +80,7 @@
 
           <div class="text">
             <p>
-              <b>Communication</b>
+              <b>Communication</b><br>
               Cats communicate by marking trees, fence posts, or furniture with their claws or their waste. These scent posts
               are meant to inform others of a cat's home range. House cats employ a vocal repertoire that extends from a purr
               to a screech.
@@ -81,7 +89,7 @@
 
           <div class="text">
             <p>
-              <b>Diet</b>
+              <b>Diet</b><br>
               Domestic cats remain largely carnivorous, and have evolved a simple gut appropriate for raw meat. They also
               retain the rough tongue that can help them clean every last morsel from an animal bone (and groom themselves).
               Their diets vary with the whims of humans, however, and can be supplemented by the cat's own hunting successes.
@@ -89,6 +97,59 @@
           </div>
       </div>
 
+      <div id="gif2">
+      <img src="bilder/cat.gif" name="moving cat">
+      <img src="bilder/cat.gif" name="moving cat">
+     </div>
+
+     <div id="total">
+       <div class="text">
+         <p>
+           <b>Relationship with Humans</b><br>
+           Felis catus has had a very long relationship with humans. Ancient Egyptians may have first domesticated cats
+           as early as 4,000 years ago. Plentiful rodents probably drew wild felines to human communities. The cats'
+           skill in killing them may have first earned the affectionate attention of humans. Early Egyptians worshipped
+           a cat goddess and even mummified their beloved pets for their journey to the next world—accompanied by
+           mummified mice! Cultures around the world later adopted cats as their own companions. <br>
+         </p>
+       </div>
+
+       <div class="text">
+         <p>
+           <b>Hunting Abilities</b><br>
+           Like their wild relatives, domestic cats are natural hunters able to stalk prey and pounce with sharp claws
+           and teeth. They are particularly effective at night, when their light-reflecting eyes allow them to see better
+           than much of their prey. Cats also enjoy acute hearing. All cats are nimble and agile, and their long tails aid
+           their outstanding balance.
+         </p>
+       </div>
+
+       <div class="text">
+         <p>
+           <b>Communication</b><br>
+           Cats communicate by marking trees, fence posts, or furniture with their claws or their waste. These scent posts
+           are meant to inform others of a cat's home range. House cats employ a vocal repertoire that extends from a purr
+           to a screech.
+         </p>
+       </div>
+
+       <div class="text">
+         <p>
+           <b>Diet</b><br>
+           Domestic cats remain largely carnivorous, and have evolved a simple gut appropriate for raw meat. They also
+           retain the rough tongue that can help them clean every last morsel from an animal bone (and groom themselves).
+           Their diets vary with the whims of humans, however, and can be supplemented by the cat's own hunting successes.
+         </p>
+       </div>
+     </div>
+
+     <div id="door">
+       <h2>Cats<img src="bilder/door.jpg">Cats</h2>
+     </div>
+
+     <div id="test">
+       <img src="bilder/source.gif">
+     </div>
 
     <footer> <!--understa bandet-->
       <p>
