--- a/tribute-page.html
+++ b/tribute-page.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet"> <!--länka en font-->
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet"> <!--länka en font-->
     <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap" rel="stylesheet">
+    <link rel="icon" href="cat.gif" type="image/gif">
 
   </head>
   <body>
@@ -64,7 +65,12 @@
               as early as 4,000 years ago. Plentiful rodents probably drew wild felines to human communities. The cats'
               skill in killing them may have first earned the affectionate attention of humans. Early Egyptians worshipped
               a cat goddess and even mummified their beloved pets for their journey to the next world—accompanied by
-              mummified mice! Cultures around the world later adopted cats as their own companions. <br>
+              mummified mice! Cultures around the world later adopted cats as their own companions. Felis catus has had a
+              very long relationship with humans. Ancient Egyptians may have first domesticated cats as early as 4,000 years
+              ago. Plentiful rodents probably drew wild felines to human communities. The cats' skill in killing them may
+              have first earned the affectionate attention of humans. Early Egyptians worshipped a cat goddess and even
+              mummified their beloved pets for their journey to the next world—accompanied by mummified mice! Cultures
+              around the world later adopted cats as their own companions.
             </p>
           </div>
 
@@ -74,7 +80,10 @@
               Like their wild relatives, domestic cats are natural hunters able to stalk prey and pounce with sharp claws
               and teeth. They are particularly effective at night, when their light-reflecting eyes allow them to see better
               than much of their prey. Cats also enjoy acute hearing. All cats are nimble and agile, and their long tails aid
-              their outstanding balance.
+              their outstanding balance. Like their wild relatives, domestic cats are natural hunters able to stalk prey and
+              pounce with sharp claws and teeth. They are particularly effective at night, when their light-reflecting eyes
+              allow them to see better than much of their prey. Cats also enjoy acute hearing. All cats are nimble and agile,
+              and their long tails aid their outstanding balance.
             </p>
           </div>
 
@@ -83,13 +92,23 @@
               <b>Communication</b><br>
               Cats communicate by marking trees, fence posts, or furniture with their claws or their waste. These scent posts
               are meant to inform others of a cat's home range. House cats employ a vocal repertoire that extends from a purr
-              to a screech.
+              to a screech. Cats communicate by marking trees, fence posts, or furniture with their claws or their waste. These
+              scent posts are meant to inform others of a cat's home range. House cats employ a vocal repertoire that extends
+              from a purr to a screech. Cats communicate by marking trees, fence posts, or furniture with their claws or their
+              waste. These scent posts are meant to inform others of a cat's home range. House cats employ a vocal repertoire
+              that extends from a purr to a screech.
             </p>
           </div>
 
           <div class="text">
             <p>
               <b>Diet</b><br>
+              Domestic cats remain largely carnivorous, and have evolved a simple gut appropriate for raw meat. They also
+              retain the rough tongue that can help them clean every last morsel from an animal bone (and groom themselves).
+              Their diets vary with the whims of humans, however, and can be supplemented by the cat's own hunting successes.
+              Domestic cats remain largely carnivorous, and have evolved a simple gut appropriate for raw meat. They also
+              retain the rough tongue that can help them clean every last morsel from an animal bone (and groom themselves).
+              Their diets vary with the whims of humans, however, and can be supplemented by the cat's own hunting successes.
               Domestic cats remain largely carnivorous, and have evolved a simple gut appropriate for raw meat. They also
               retain the rough tongue that can help them clean every last morsel from an animal bone (and groom themselves).
               Their diets vary with the whims of humans, however, and can be supplemented by the cat's own hunting successes.
@@ -110,7 +129,12 @@
            as early as 4,000 years ago. Plentiful rodents probably drew wild felines to human communities. The cats'
            skill in killing them may have first earned the affectionate attention of humans. Early Egyptians worshipped
            a cat goddess and even mummified their beloved pets for their journey to the next world—accompanied by
-           mummified mice! Cultures around the world later adopted cats as their own companions. <br>
+           mummified mice! Cultures around the world later adopted cats as their own companions. Felis catus has had a
+           very long relationship with humans. Ancient Egyptians may have first domesticated cats as early as 4,000 years
+           ago. Plentiful rodents probably drew wild felines to human communities. The cats' skill in killing them may
+           have first earned the affectionate attention of humans. Early Egyptians worshipped a cat goddess and even
+           mummified their beloved pets for their journey to the next world—accompanied by mummified mice! Cultures
+           around the world later adopted cats as their own companions.
          </p>
        </div>
 
@@ -120,7 +144,10 @@
            Like their wild relatives, domestic cats are natural hunters able to stalk prey and pounce with sharp claws
            and teeth. They are particularly effective at night, when their light-reflecting eyes allow them to see better
            than much of their prey. Cats also enjoy acute hearing. All cats are nimble and agile, and their long tails aid
-           their outstanding balance.
+           their outstanding balance. Like their wild relatives, domestic cats are natural hunters able to stalk prey and
+           pounce with sharp claws and teeth. They are particularly effective at night, when their light-reflecting eyes
+           allow them to see better than much of their prey. Cats also enjoy acute hearing. All cats are nimble and agile,
+           and their long tails aid their outstanding balance.
          </p>
        </div>
 
@@ -129,7 +156,11 @@
            <b>Communication</b><br>
            Cats communicate by marking trees, fence posts, or furniture with their claws or their waste. These scent posts
            are meant to inform others of a cat's home range. House cats employ a vocal repertoire that extends from a purr
-           to a screech.
+           to a screech. Cats communicate by marking trees, fence posts, or furniture with their claws or their waste. These
+           scent posts are meant to inform others of a cat's home range. House cats employ a vocal repertoire that extends
+           from a purr to a screech. Cats communicate by marking trees, fence posts, or furniture with their claws or their
+           waste. These scent posts are meant to inform others of a cat's home range. House cats employ a vocal repertoire
+           that extends from a purr to a screech.
          </p>
        </div>
 
@@ -139,13 +170,21 @@
            Domestic cats remain largely carnivorous, and have evolved a simple gut appropriate for raw meat. They also
            retain the rough tongue that can help them clean every last morsel from an animal bone (and groom themselves).
            Their diets vary with the whims of humans, however, and can be supplemented by the cat's own hunting successes.
+           Domestic cats remain largely carnivorous, and have evolved a simple gut appropriate for raw meat. They also
+           retain the rough tongue that can help them clean every last morsel from an animal bone (and groom themselves).
+           Their diets vary with the whims of humans, however, and can be supplemented by the cat's own hunting successes.
+           Domestic cats remain largely carnivorous, and have evolved a simple gut appropriate for raw meat. They also
+           retain the rough tongue that can help them clean every last morsel from an animal bone (and groom themselves).
+           Their diets vary with the whims of humans, however, and can be supplemented by the cat's own hunting successes.
          </p>
        </div>
      </div>
 
      <div id="door">
-       <h2>Cats<img src="bilder/door.jpg">Cats</h2>
+       <h2>H<img src="bilder/door.jpg">H</h2>
      </div>
+
+
 
      <div id="test">
        <img src="bilder/source.gif">
