--- a/TributePage/tribute-page.html
+++ b/TributePage/tribute-page.html
@@ -2,11 +2,11 @@
   <head>
     <title>My Cats</title>
     <meta charset="UTF-8"> <!--alla tecken-->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- gör att webbsidan ändra sig när om man skulle gå in på till exempel en mobil-->
     <link rel="stylesheet" href="styles/style.css"> <!--länka css-filen-->
     <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet"> <!--länka en font-->
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet"> <!--länka en font-->
-    <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap" rel="stylesheet"> <!--länka en font-->
     <link rel="icon" href="cat.gif" type="image/gif">
 
   </head>
@@ -38,8 +38,8 @@
           </div>
         </div>
 
-        <a id="wiki-link" href="https://sv.wikipedia.org/wiki/Cornish_rex" target="_blank">Cornish Rex Wikipedia</a>
         <!--länk till wikipedia sida-->
+        <a id="wiki-link" href="https://sv.wikipedia.org/wiki/Cornish_rex" target="_blank">Cornish Rex Wikipedia</a>
 
         <div id="gif">
           <img class="movingcat" src="bilder/sleep.gif" name="sleeping cat">
@@ -180,16 +180,14 @@
        </div>
      </div>
 
-     <div id="door">
+     <!--roterande bilder med deras namn brevid de-->
+     <div id="info">
        <div class="change-text"> </div>
-       <div id="test"></div>
+       <div id="change-image"></div>
        <div class="change-text"> </div>
      </div>
 
-
-
-
-
+     <!--en gif som kommer finnas i rubriken-->
      <div id="runningCat">
        <img src="bilder/source.gif">
      </div>
